// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NotFoundMessage matches snapshot with custom backToLink 1`] = `
<div>
  <div
    class="container"
  >
    <h2
      class="title"
    >
      Workout list not found
    </h2>
    <a
      class="link"
      href="/custom"
    >
      <button
        class="button primary md"
        data-headlessui-state=""
        type="button"
      >
        Back to Home
      </button>
    </a>
  </div>
</div>
`;

exports[`NotFoundMessage matches snapshot with default props 1`] = `
<div>
  <div
    class="container"
  >
    <h2
      class="title"
    >
      Workout list not found
    </h2>
    <a
      class="link"
      href="/"
    >
      <button
        class="button primary md"
        data-headlessui-state=""
        type="button"
      >
        Back to Home
      </button>
    </a>
  </div>
</div>
`;
